# memcoder

./: .gitignore  LICENSE  README.md  main.py  mcp_config.example.json  memories.json  plugin.json  pyproject.toml  requirements.txt
agent/: agent_state.py  problem_solver.py  solve_and_learn.py
api/: cognition.py  memcoder_api.py
cache/: normalize_query.py  query_cache.py
client/: __init__.py  agent.py  display.py  session.py
context/: hierarchical_context_builder.py
data/ai/: raw.txt  (+1 more)
docs/: antigravity_mcp.md  antigravity_prompt_template.md  beta1_antigravity_proof.md  beta1_release.md  roadmap.md
examples/: 01_basic.py  02_learning.py  03_sessions.py  04_multi_agent.py  05_crud.py  provider_free.py
llm/: optional_ollama.py  rerank_llm.py
memcoder/: __init__.py  __main__.py  cli.py
memory/: assets.py  auto_learn.py  budget.py  capture.py  chroma_client.py  chunk_corpus.py  clear.py  compressor.py  confidence.py  consolidate_and_replace.py  consolidate_memory.py  consolidator.py  context_builder.py  context_formatter.py  conversation_capture.py  conversation_learner.py  corpus_reflection_llm.py  corpus_reflection_postprocessor.py  delete.py  delete_memories.py  duplicate.py  embedder.py  extract_domain.py  extract_everything.py  extractor.py  find_duplicate_ids.py  formatter.py  hierarchical_search.py  importance.py  knowledge.py  llm_extractor.py  load_corpus.py  load_raw.py  markdown_import.py  memory_budget.py  memory_hash.py  meta_skill_capture.py  meta_skill_llm.py  meta_skill_postprocessor.py  mistake_capture.py  (+31 more)
scripts/: cleanup.py  configure_agy_plugin.py  diagnose_retrieval.py  verify_beta1_proof.py
server/: main.py  models.py
session/: chat_history.py  debug_state.py
tests/: test_agy_setup_cli.py  test_alpha.py  test_asset_catalog.py  test_automation_cli.py  test_autonomous_learning.py  test_beta1_proof_harness.py  test_database_isolation.py  test_knowledge_config.py  test_knowledge_index.py  test_markdown_import.py  test_mcp_provider_independence.py  test_memory_quality.py  test_multi_agent_isolation.py  test_ollama_optional.py  test_record_quality_feedback.py  (+4 more)
(+33 files in other folders)
